smoothed out some issues set up some skeleton

--- a/movie-project.html
+++ b/movie-project.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <script src="js/movie-project.js"></script>
+    <script src="js/movie-project.js"></script>
 </head>
 <body>
-<div id="header">
-
+<div>
+    <form>
+        <div>
+        <input id="title" type="text" placeholder="Title">
+        <input id="genre" type="text" placeholder="Genre">
+        <input id="rating" type="text" placeholder="Rating">
+        <input id="director" type="text" placeholder="Director">
+        </div>
+        <div>
+        <button type="submit">Add?</button>
+        </div>
+    </form>
 </div>
+<div id="body"><p></p></div>
 </body>
 </html>
