can add new movie to page

--- a/movie-project.html
+++ b/movie-project.html
@@ -13,12 +13,12 @@
     <form>
         <div>
         <input id="title" type="text" placeholder="Title">
-        <input id="genre" type="text" placeholder="Genre">
+        <input id="comment" type="text" placeholder="Genre">
         <input id="rating" type="text" placeholder="Rating">
         <input id="director" type="text" placeholder="Director">
         </div>
         <div>
-        <button type="submit">Add?</button>
+        <button id="add" type="submit">Add?</button>
         </div>
     </form>
 </div>
