--- a/movie-project.html
+++ b/movie-project.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/movie-project.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/ccdb04ab2a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div>
@@ -22,7 +23,13 @@
         </div>
     </form>
 </div>
-<div id="body"><p></p></div>
+
+<div class="mainTitle text-center">
+    <h1><i class="fa-solid fa-video"></i>The Movie Reviewer</h1>
+</div>
+
+
+<div id="body"><p>Loading...</p></div>
 
 
 
