--- a/movie-project.html
+++ b/movie-project.html
@@ -14,9 +14,10 @@
     <form>
         <div>
         <input id="title" type="text" placeholder="Title">
-        <input id="comment" type="text" placeholder="Genre">
+        <input id="comment" type="text" placeholder="Comment">
         <input id="rating" type="text" placeholder="Rating">
         <input id="director" type="text" placeholder="Director">
+        <input id="genre" type="text" placeholder="Genre">
         </div>
         <div>
         <button id="add" type="submit">Add?</button>
